Fix layout on Firefox

--- a/rec/index.css
+++ b/rec/index.css
@@ -28,6 +28,7 @@ body {
 
 .legacy-mode {
   display: none;
+  margin-top: 100px;
 }
 
 .floating-title {
